@@ -1,5 +1,11 @@
 2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
+        * players.c: (read_player): revert locking of audio stream patch, this
+	patch breaks esd when used in TCP mode on localhost (Santiago Otero)
+	
+
+2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
         * esddsp.in: remove bashim (PLD)
 	
 
